--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
@@ -71,7 +71,8 @@
                                 <h5>Content (Az)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" placeholder="Content AZE"></textarea>
+                                <textarea asp-for="ContentAz" class="form-control " id="ccomment" required=""></textarea>
+
                             </div>
                         </div>
                         <div class="form-group">
@@ -79,7 +80,7 @@
                                 <h5>Content (En)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment1" placeholder="Content AZE"></textarea>
+                                <textarea asp-for="ContentEn" class="form-control " id="ccomment1" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group">
@@ -87,7 +88,7 @@
                                 <h5>Content (Ru)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment2" placeholder="Content AZE"></textarea>
+                                <textarea asp-for="ContentRu" class="form-control " id="ccomment2" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group">
