--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
@@ -135,7 +135,8 @@
     <script src="~/Custom/js/fileCenreated.js" asp-append-version="true"></script>
  
     <script>
-        CKEDITOR.replace("ccomment")
+        CKEDITOR.config.autoParagraph = false;
+        CKEDITOR.replace("ccomment",)
         CKEDITOR.replace("ccomment1")
         CKEDITOR.replace("ccomment2")
     </script>
