--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Update.cshtml
@@ -42,7 +42,7 @@
                                 <h5>Title (Az)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <input type="text" asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title AZE">
+                                <input  asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title AZE">
                             </div>
                         </div>
                         <div class="form-group">
@@ -50,7 +50,7 @@
                                 <h5>Title (En)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <input type="text" asp-for="TittleEn" id="f-name" class="form-control" placeholder="Title ENG">
+                                <input  asp-for="TittleEn" id="f-name" class="form-control" placeholder="Title ENG">
                             </div>
                         </div>
                         <div class="form-group">
@@ -58,7 +58,7 @@
                                 <h5>Title (Ru)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <input type="text" asp-for="TittleRu" id="f-name" class="form-control" placeholder="Title RU">
+                                <input  asp-for="TittleRu" id="f-name" class="form-control" placeholder="Title RU">
                             </div>
                         </div>
                         <div class="form-group ">
@@ -66,7 +66,7 @@
                                 <h5>Content(Az)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" placeholder="Content AZE"></textarea>
+                                <textarea asp-for="ContentAz" class="form-control " id="ccomment" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
@@ -74,7 +74,7 @@
                                 <h5>Content(En)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment1" placeholder="Content ENG"></textarea>
+                                <textarea asp-for="ContentEn" class="form-control " id="ccomment1" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
@@ -82,7 +82,7 @@
                                 <h5>Content(Ru)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment2" placeholder="Content RU"></textarea>
+                                <textarea asp-for="ContentRu" class="form-control " id="ccomment2" required=""></textarea>
                             </div>
                         </div>
 
