--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
@@ -63,8 +63,8 @@
                                 <h5>Content (Az)</h5>
                             </label>
                             <div class="col-lg-11">
-                                @*<textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" required="" placeholder="Content AZE"></textarea>*@
-                                <input asp-for="ContentAz" id="ccomment" class="form-control" placeholder="Content AZ" required="">
+                                <textarea asp-for="ContentAz"  class="form-control " id="ccomment" required=""></textarea>
+                               
                             </div>
                         </div>
                         <div class="form-group ">
@@ -72,7 +72,8 @@
                                 <h5>Content (En)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <input asp-for="ContentEn" id="ccomment1" class="form-control" placeholder="Content EN" required="">
+                                <textarea asp-for="ContentEn" class="form-control " id="ccomment1" required=""></textarea>
+                               
                             </div>
                         </div>
                         <div class="form-group ">
@@ -80,7 +81,7 @@
                                 <h5>Content (Ru)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <input asp-for="ContentRu" id="ccomment2" class="form-control" placeholder="Content RU" required="">
+                                <textarea asp-for="ContentRu" class="form-control " id="ccomment2" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group">
