--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Add.cshtml
@@ -61,8 +61,8 @@
                                 <h5>Content (Az)</h5>
                             </label>
                             <div class="col-lg-11">
-                                
-                                <input asp-for="NameRu" id="ccomment" class="form-control"  required="">
+
+                                <textarea asp-for="ContentAz" class="form-control " id="ccomment" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
@@ -70,7 +70,7 @@
                                 <h5>Content (En)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <input asp-for="NameEn" id="ccomment1" class="form-control" required="">
+                                <textarea asp-for="ContentEn" class="form-control " id="ccomment1" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
@@ -78,7 +78,7 @@
                                 <h5>Content (Ru)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <input asp-for="NameRu" id="ccomment2" class="form-control" required="">
+                                <textarea asp-for="ContentRu" class="form-control " id="ccomment2" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group">
