--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Create.cshtml
@@ -59,7 +59,7 @@
                                 <h5>Content (Az)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" required="" placeholder="Content AZE"></textarea>
+                                <textarea asp-for="ContentAz" class="form-control " id="ccomment" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
@@ -67,7 +67,7 @@
                                 <h5>Content (En)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment1" required="" placeholder="Content EN"></textarea>
+                                <textarea asp-for="ContentEn" class="form-control " id="ccomment1" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
@@ -75,7 +75,7 @@
                                 <h5>Content (Ru)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment2" required="" placeholder="Content RU"></textarea>
+                                <textarea asp-for="ContentRu" class="form-control " id="ccomment2" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group">
