--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Slider/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Slider/Add.cshtml
@@ -26,42 +26,63 @@
         <div class="col-lg-12">
             <section class="panel add-model">
                 <header class="panel-heading">
-                    Add Slider Elements
+                    Create Slider Elements
                 </header>
                 <hr />
                 <div class="panel-body add-body">
                     <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Slider" asp-action="Add" method="post" enctype="multipart/form-data">
                         <div class="form-group row">
                             <div class="col-lg-11">
+                                <label class="col-sm-2 col-sm-2 control-label text-00">
+                                    <h5>Tittle (Az)</h5>
+                                </label>
                                 <input asp-for="TittleAz" id="f-name" class="form-control" placeholder="Tittle AZE" required>
                             </div>
                         </div>
                         <div class="form-group row">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Tittle (En)</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <input asp-for="TittleEn" id="f-name" class="form-control" placeholder="Tittle Eng" required>
                             </div>
                         </div>
                         <div class="form-group row">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Tittle (Ru)</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <input asp-for="TittleRu" id="f-name" class="form-control" placeholder="Tittle RU" required>
                             </div>
                         </div>
                         <div class="form-group row">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Content (Az)</h5>
+                            </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" required="" placeholder="Content AZE"></textarea>
+                                <textarea asp-for="ContentAz" class="form-control " id="ccomment" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group row">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Content (En)</h5>
+                            </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment" required="" placeholder="Content ENG"></textarea>
+                                <textarea asp-for="ContentEn" class="form-control " id="ccomment1" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group row">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Content (Ru)</h5>
+                            </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment" required="" placeholder="Content RU"></textarea>
+                                <textarea asp-for="ContentRu" class="form-control " id="ccomment2" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group row">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Image</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <input asp-for="file" placeholder="Images" id="f-name" class="form-control" required>
                             </div>
