--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
@@ -33,37 +33,59 @@
                 <div class="panel-body add-body">
                     <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Add" method="post" enctype="multipart/form-data">
                         <div class="form-group">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Tittle (Az)</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <input type="text" asp-for="NameAz" id="f-name" class="form-control" required="" placeholder="Name AZE">
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Tittle (En)</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <input type="text" asp-for="NameEn" id="f-name" class="form-control" placeholder="Name ENG">
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Tittle (Ru)</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <input type="text" asp-for="NameRu" id="f-name" class="form-control" placeholder="Name RU">
                             </div>
                         </div>
                         <div class="form-group ">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Content (Az)</h5>
+                            </label>
                             <div class="col-lg-11">
-                                <textarea class="form-control " id="ccomment" asp-for="ContentAz" rows="15" required="" placeholder="Content AZE"></textarea>
+                                <textarea asp-for="ContentAz" class="form-control " id="ccomment" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Content (En)</h5>
+                            </label>
                             <div class="col-lg-11">
-                                <textarea class="form-control " id="ccomment" asp-for="ContentEn" rows="15" required="" placeholder="Content ENG"></textarea>
+                                <textarea asp-for="ContentEn" class="form-control " id="ccomment1" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Content (Ru)</h5>
+                            </label>
                             <div class="col-lg-11">
-                                <textarea class="form-control " id="ccomment" asp-for="ContentRu" rows="15" required="" placeholder="Content RU"></textarea>
+                                <textarea asp-for="ContentRu" class="form-control " id="ccomment2" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Service</h5>
+                            </label>
                             <div class="col-lg-11">
+                                
                                 <select asp-for="ServiceId" asp-items="@ViewBag.services"
                                         class="select2DropDown form-control" required="">
                                     <option value="1">1</option>
@@ -71,9 +93,13 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-lg-11">
-                                <input type="file" name="file" placeholder="Images" id="f-name" class="form-control" multiple="multiple">
-                            </div>
+                            <div class="col-sm-2 imgUp">
+                                <div id="upload_name" class="imagePreview"></div>
+                                <label class="btn btn-primary">
+                                    Upload<input class="uploadFile img" asp-for="file" style="width: 0px;height: 0px;overflow: hidden;">
+                                </label>
+                            </div><!-- col-2 -->
+                            <i class="fa fa-plus imgAdd"></i>
                         </div>
                         <div class="form-group" style="margin-left: 72%;">
                             <div class="col-lg-offset-2 col-lg-11">
