--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Update.cshtml
@@ -36,36 +36,57 @@
                     <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Update" method="post" enctype="multipart/form-data">
 
                         <div class="form-group">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Tittle (Az)</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <input asp-for="NameAz" id="f-name" class="form-control" placeholder="Name AZE">
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Tittle (En)</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <input asp-for="NameEn" id="f-name" class="form-control" placeholder="Name ENG">
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Tittle (En)</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <input asp-for="NameRu" id="f-name" class="form-control" placeholder="Name RU">
                             </div>
                         </div>
                         <div class="form-group ">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Content (Az)</h5>
+                            </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentAz" rows="15" class="form-control" id="ccomment" placeholder="Content AZE"></textarea>
+                                <textarea asp-for="ContentAz" class="form-control" id="ccomment" placeholder="Content AZE"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Content (En)</h5>
+                            </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment" placeholder="Content ENG"></textarea>
+                                <textarea asp-for="ContentEn" class="form-control " id="ccomment1" placeholder="Content ENG"></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Content (Ru)</h5>
+                            </label>
                             <div class="col-lg-11">
-                                <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment" placeholder="Content RU"></textarea>
+                                <textarea asp-for="ContentRu" class="form-control " id="ccomment2" placeholder="Content RU"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 col-sm-2 control-label text-00">
+                                <h5>Service</h5>
+                            </label>
                             <div class="col-lg-11">
                                 <select asp-for="ServiceId" asp-items="@ViewBag.services"
                                         class="select2DropDown form-control" required="">
