--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Create.cshtml
@@ -85,7 +85,7 @@
                                     Upload<input  class="uploadFile img" asp-for="file" style="width: 0px;height: 0px;overflow: hidden;">
                                 </label>
                             </div><!-- col-2 -->
-                            <i class="fa fa-plus imgAdd"></i>
+                            @*<i class="fa fa-plus imgAddService"></i>*@
                         </div>
 
                         <div style="margin-left: 72%;">
