--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Slider/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Slider/Update.cshtml
@@ -88,7 +88,7 @@
                         </div>
                         <div class="wrapper--preview">
 
-                            @if (string.IsNullOrEmpty(Model.pathImage) == false)
+                            @if (string.IsNullOrEmpty(Model.pathImage) == null)
                             {
                                 <input type="file" asp-for="files" />
                             }
