--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Add.cshtml
@@ -25,7 +25,7 @@
     }
 </style>
 
-<div class="container">
+
     <div class="row">
         <div class="col-lg-12">
             <section class="panel add-model">
@@ -55,11 +55,15 @@
                             <header class="panel-heading" style="padding: 2px 0px">
                                 Create News Images
                             </header>
-                          
+
                             <div class="form-group">
-                                <div class="col-lg-11">
-                                    <input asp-for="files" multiple="multiple" id="f-name" class="form-control" placeholder="Title RU" >
-                                </div>
+                                <div class="col-sm-2 imgUp">
+                                    <div id="upload_name" class="imagePreview"></div>
+                                    <label class="btn btn-primary">
+                                        Upload<input class="uploadFile img" asp-for="file" style="width: 0px;height: 0px;overflow: hidden;">
+                                    </label>
+                                </div><!-- col-2 -->
+                                <i class="fa fa-plus imgAdd"></i>
                             </div>
                             <div class="form-group" style="margin-left: 53%;">
                                 <div class="col-lg-offset-2 col-lg-12">
@@ -75,7 +79,7 @@
             </section>
         </div>
     </div>
-</div>
+
 
 @section scripts{
     <script>
