--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Update.cshtml
@@ -66,7 +66,7 @@
                                 <h5>Content (Az)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <input asp-for="ContentAz" id="ccomment" class="form-control" required="">
+                                <textarea asp-for="ContentAz" class="form-control " id="ccomment" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group">
@@ -74,7 +74,7 @@
                                 <h5>Content (En)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <input asp-for="ContentEn" id="ccomment1" class="form-control" required="">
+                                <textarea asp-for="ContentEn" class="form-control " id="ccomment1" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group">
@@ -82,7 +82,7 @@
                                 <h5>Content (Ru)</h5>
                             </label>
                             <div class="col-lg-11">
-                                <input asp-for="ContentRu" id="ccomment2" class="form-control" required="">
+                                <textarea asp-for="ContentRu" class="form-control " id="ccomment2" required=""></textarea>
                             </div>
                         </div>
                       
