--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Slider/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Slider/Add.cshtml
@@ -79,13 +79,14 @@
                                 <textarea asp-for="ContentRu" class="form-control " id="ccomment2" required=""></textarea>
                             </div>
                         </div>
-                        <div class="form-group row">
-                            <label class="col-sm-2 col-sm-2 control-label text-00">
-                                <h5>Image</h5>
-                            </label>
-                            <div class="col-lg-11">
-                                <input asp-for="file" placeholder="Images" id="f-name" class="form-control" required>
-                            </div>
+                        <div class="form-group">
+                            <div class="col-sm-2 imgUp">
+                                <div id="upload_name" class="imagePreview"></div>
+                                <label class="btn btn-primary">
+                                    Upload<input class="uploadFile img" asp-for="file" style="width: 0px;height: 0px;overflow: hidden;">
+                                </label>
+                            </div><!-- col-2 -->
+                            <i class="fa fa-plus imgAddService"></i>
                         </div>
                         <div class="form-group row" style="margin-left: 72%;">
                             <div class="col-lg-offset-2 col-lg-11">
