--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/UserProfile/Default.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/UserProfile/Default.cshtml
@@ -5,5 +5,5 @@
 </div>
 <ul class="nav nav-pills nav-stacked">
     <li class="active"><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index" style="border-left: #ffc925"> <i class="icon-user"></i> Profile</a></li>
-    <li><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Create"> <i class="icon-pencil"></i> Create New Admin</a></li>
+    @*<li><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Create"> <i class="icon-pencil"></i> Create New Admin</a></li>*@
 </ul>
